[package]
name = "rinthdesk"
version = "0.1.0"
description = "Lightweight Modrinth desktop downloader"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
ureq = { version = "2", default-features = false, features = ["tls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
